--- a/files/cartabinaria/lighttpd.conf
+++ b/files/cartabinaria/lighttpd.conf
@@ -1,9 +1,9 @@
-server.document-root = "/opt/hugo/csunibo/source/public" 
+server.document-root = "/opt/hugo/cartabinaria/source/public" 
 
 server.port = 8080
 
-server.username = "csunibo" 
-server.groupname = "csunibo" 
+server.username = "cartabinaria" 
+server.groupname = "cartabinaria" 
 
 #If running lighttpd earlier than lighttpd 1.4.71, uncomment (remove '#') to add the following:
 mimetype.assign = (
